# smyst-app

./: .gitignore  AGENTS.md  Autopilot_Profile_Pipeline_Spec.md  README.md  SETUP.md  Smyst_Konzept.html  Smyst_Strategie_Review.docx  Twynt_Konzept.html  Twynt_Strategie_Review.docx  VERSION  app-mockup.html  capacitor.config.ts  docker-compose.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  smyst_179_candidates.json  styles.css  tailwind.config.ts  tsconfig.app.json  vite.config.ts  wrangler.legacy-auth-redirect.toml  wrangler.toml  wrangler.translate.toml  wrangler.www-redirect.toml
backend/: .dockerignore  .env.salad.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  healthcheck.py  main.py
backend/app/ai/: __init__.py  avatar.py  capsule_builder.py  dataflow.py  degraded_messages.py  demo_profiles.py  embeddings.py  estate_blacklist.py  historical_pipeline.py  historical_profiles.py  llm_router.py  memory.py  models.py  moderation.py  parsers.py  (+13 more)
backend/tests/: test_ai_core.py  test_asr_route.py  test_auth_account.py  test_auth_contract.py  test_auth_email.py  test_avatar.py  test_backfill_gender.py  test_candidate_ingest.py  test_capsule_builder.py  test_chat_web_research.py  test_health_contract.py  test_historical_pipeline.py  test_llm_router.py  test_production_readiness.py  test_publisher.py  test_qa_checks.py  test_research_profiles.py  test_risk_checks.py  test_security_core.py  test_seed_candidates.py  test_social_links.py  test_storage_uploads.py  test_tts_route.py  test_twins_delete.py  test_web_research.py
(+360 files in other folders)
