[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smyst-backend"
version = "0.1.0"
description = "Smyst legacy local backend reference"
requires-python = ">=3.12"
dependencies = [
  "asyncpg>=0.29.0",
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "redis>=5.2.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
